--- a/src/app/sections/awards/awards.component.scss
+++ b/src/app/sections/awards/awards.component.scss
@@ -86,7 +86,11 @@ iframe:hover {
 
 @media (max-width: 1100px) {
   .awards {
-    margin-inline: 1vw;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     display: flex;
   }
 
