--- a/src/styles.scss
+++ b/src/styles.scss
@@ -191,7 +191,6 @@ html {
   position: static;
   text-align: center;
   font-size: 40px;
-  width: 100vw;
   padding-bottom: 20px;
   border-bottom: 2px solid white;
 }
